# SimpleTools

./: README.md
3DFilesConverter/: 3DSIO.cpp  3DSIO.h  CMakeLists.txt  IOBase.cpp  IOBase.h  ULog.h  byuIO.cpp  byuIO.h  ctmIO.cpp  ctmIO.h  demIO.cpp  demIO.h  facetIO.cpp  facetIO.h  filesManager.cpp  filesManager.h  gltfIO.cpp  gltfIO.h  main.cpp  objIO.cpp  objIO.h  plyIO.cpp  plyIO.h  point.hpp  stlIO.cpp  stlIO.h  tiffIO.cpp  tiffIO.h  vtkIO.cpp  vtkIO.h  vtpIO.cpp  vtpIO.h  wrlIO.cpp  wrlIO.h  x3dIO.cpp  x3dIO.h  zipManager.cpp  zipManager.h
3DModelViewer/: package-lock.json  package.json
3DModelViewer/public/: index.html  myBoot.css
3DModelViewer/src/: index.js  mesh3D.js  style.css
ArchClip/: README.md  main.cpp  widget.cpp  widget.h
ArchClip/qt-ArchClip-Default/: ArchClip.cbp  CMakeCache.txt  Makefile  cmake_install.cmake  ui_widget.h
ArchClip/qt-ArchClip-Release/: ArchClip.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
Gifer/: Gifer  Gifer.pro  README.md  gitPush.sh  qml.qrc  spec.json
Gifer/Images/: logo.icns
Gifer/Include/: imagescombiner.h  logprinter.hpp  moc_predefs.h  pointmanager.h  waitimageprovider.h  waitwindowanimation.h  windowgrabber.h
Gifer/Qml/: GifWindow.qml  main.qml  waitWindow.qml
Gifer/Source/: imagescombiner.cpp  main.cpp  pointmanager.cpp  waitimageprovider.cpp  waitwindowanimation.cpp  windowgrabber.cpp
Gifer/qt-Gifer-Release/: Qml_GifWindow_qml.cpp  Qml_main_qml.cpp  Qml_waitWindow_qml.cpp  qml_qmlcache.qrc  qmlcache_loader.cpp
OpenCTM-1.0.3/lib/: libopenctm.dylib
OpenCTM-1.0.3/tools/: bin2c  ctmbench  ctmconv  ctmviewer
godotGame/DragBallToHole/: Ball.gd  Node2D.gd  Node2D.tscn  greenBall.png.import  project.godot
godotGame/NumberGameIn3D/: Camera.gd  Environment.tscn  Viewport.tscn  World.gd  World.tscn  addTime.gd  bullet.gd  bullet.tscn  clearResult.gd  clearResult.tscn  cube.meshlib  default_env.tres  explodeNumber.gd  export_presets.cfg  fireEffect.tscn  hub.gd  hub.tscn  land.tscn  mace0.gd  mace1.gd  musics.gd  musics.tscn  number.gd  number.tscn  player.gd  project.godot  universe.jpg.import
godotGame/NumberGameIn3D/music/: explose.ogg.import
godotGame/NumberGameIn3D/objAndPng/: clear.obj.import  land.obj.import  tank_bottom.obj.import  tank_top.obj.import
godotGame/NumberGameIn3D/objFiles/: clear.obj.import  land.obj.import  tank_bottom.obj.import  tank_top.obj.import
imagesViewer/: QWindow.cpp  QWindow.h  QWindow.ui  README.md  datamanager.cpp  datamanager.h  edit.sh  imagesViewer.pro  imagesViewer.pro.user.21bcc7a  imagesViewer.pro.user.9c17c70  imagesViewer.pro.user.d755802  logprinter.cpp  logprinter.h  macrodefined.hpp  main.cpp  myapp.rc  photoframe.cpp  photoframe.h  spec.json
imagesViewer/images/: logo.icns
imagesViewer/qt-imagesViewer-Release/: .qmake.stash  Makefile  moc_QWindow.cpp  moc_predefs.h  ui_QWindow.h
stlViewer/: CMakeLists.txt  CMakeLists.txt.user.21bcc7a  CMakeLists.txt.user.d755802  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  ui_displaywindow.h  ui_openfiledialog.h  vtkPack.sh
stlViewer/Header/: displaywindow.h  logprinter.h  openfiledialog.h
stlViewer/Resource/: displaywindow.ui  imagea.qrc  openfiledialog.ui
stlViewer/Source/: displaywindow.cpp  logprinter.cpp  main.cpp  openfiledialog.cpp
stlViewer/_CPack_Packages/Darwin/STGZ/: stlViewer-1.1.1-Darwin.sh
stlViewer/qt-stlViewer-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  stlViewer.cbp  ui_displaywindow.h  ui_openfiledialog.h
stlViewer/qt-stlViewer-Default/stlViewer.app/Contents/: Info.plist
stlViewer/qt-stlViewer-Default/stlViewer.app/Contents/MacOS/: log.txt  stlViewer
stlViewer/qt-stlViewer-Default/stlViewer.app/Contents/MacOS/Resource/: .record
stlViewer/qt-stlViewer-Default/stlViewer.app/Contents/Resources/: logo.icns
stlViewer/qt-stlViewer-Default/stlViewer_autogen/3ACODNS4DZ/: moc_displaywindow.cpp  moc_openfiledialog.cpp
stlViewer/stlViewer_autogen/: mocs_compilation.cpp
stlViewer/stlViewer_autogen/3ACODNS4DZ/: moc_displaywindow.cpp  moc_openfiledialog.cpp
travelSystem/: README.md  main.html
travelSystem/POI_search/: around_search.html  key_word_search.html  main.html  polygon_search.html
travelSystem/intelligent_location/: IP_location.html  address_location.html  browser_location.html  key_word_search.html  main.html
travelSystem/memorandum/: delete.php  edit.php  editSave.php~  login.php  main.html~  main.php~  new.php~  newSave.php  note.php~  register.html  register.php~
travelSystem/one_key_search/: city_drop_down_list.html  geo_code.html  main.html
travelSystem/traffic_status/: circle.html  custom.html  main.html  rectangle.html
travelSystem/travel_path/: bus_line.html  bus_station.html  main.html  otherWays.html
travelSystem/urban_navigation/: building3D.html  heat_map.html  indoor_map.html  main.html  satelite.html
travelSystem/weather/: weather.html
(+62 files in other folders)
